# weaviate-ui

./: .env.example  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
.github/workflows/: docker.yml  docker_latest.yml
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  App_basic.tsx  ClassData.tsx  Welcome.tsx  _defaultProps.tsx  api.ts  customMenu.ts  main.tsx
weaviate_ui/: main.py  weaviate_client.py
